--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ky": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
